fixed multiple scrollbars bug

--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -31,6 +31,7 @@ html, body, #root {
   height: 100%;
   width: 100%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 .scrollbar-hidden {
   scrollbar-width: none; /* Firefox */
